--- a/elasticsearch-deployment.yaml
+++ b/elasticsearch-deployment.yaml
@@ -41,7 +41,7 @@ spec:
       restartPolicy: Always
       volumes:
         - persistentVolumeClaim:
-            claimName: es
+            claimName: wiki-es
           name: es-data
         - configMap:
             name: es-conf
