--- a/mongo-deployment.yaml
+++ b/mongo-deployment.yaml
@@ -33,8 +33,8 @@ spec:
       restartPolicy: Always
       volumes:
         - persistentVolumeClaim:
-            claimName: db-config
+            claimName: wiki-db-config
           name: mongo-configdb
         - persistentVolumeClaim:
-            claimName: db-data
+            claimName: wiki-db-data
           name: mongo-db
