--- a/app-inf.yaml
+++ b/app-inf.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: growi-canfes-app
+  name: growi-canfes-up-files
   annotations:
     volume.beta.kubernetes.io/storage-class: "slow"
 spec:
@@ -13,15 +13,15 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   claimRef:
     namespace: y-canfes
-    name: wiki-data
+    name: wiki-up-files
   nfs:
     server: nfs.unipro.infra
-    path: /nfs/users/yuito-it/canfes/wiki/app
+    path: /nfs/users/yuito-it/canfes/wiki/uploaded_files
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: wiki-data
+  name: wiki-up-files
   labels:
     app: growi
   annotations:
@@ -32,4 +32,4 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  volumeName: growi-canfes-app
+  volumeName: growi-canfes-up-files
