--- a/app-deployment.yaml
+++ b/app-deployment.yaml
@@ -24,7 +24,7 @@ spec:
             - name: ELASTICSEARCH_URI
               value: http://elasticsearch:9200/growi
             - name: MONGO_URI
-              value: mongodb://mongo:27017/growi
+              value: mongodb://growi-yfes:g6Br4cZE@mongodb-mongodb-sharded.mongo:27017/growi-yfes
             - name: PASSWORD_SEED
               value: changeme
             - name: AUDIT_LOG_ENABLED
